tests/should_fail/for_destructure_tuple_on_int_list.nv
module test
// for destructure: tuple pattern on list of Ints (not list of tuples)
let xs: [Int] = [1, 2, 3]
for (a, b) in xs {
    println(Cast::string(a))
}
